Bug 943668 - Ensure window.screenX and .screenY return css pixels. r=roc, a=bajaj