dom/base/nsGlobalWindow.h
@@ -1275,7 +1275,7 @@ protected:
 
   void PreloadLocalStorage();
 
-  // Returns device pixels.
+  // Returns device pixels.  Outer windows only.
   nsIntPoint GetScreenXY(mozilla::ErrorResult& aError);
 
   int32_t RequestAnimationFrame(const nsIDocument::FrameRequestCallbackHolder& aCallback,
